fix: enhance SEO and CLI support in documentation and meta tags

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Primary Meta Tags -->
     <title>PDF Diff - Compare PDFs Privately & Securely in Your Browser</title>
     <meta name="title" content="PDF Diff - Compare PDFs Privately & Securely in Your Browser" />
-    <meta name="description" content="Free online PDF comparison tool. Compare PDF documents privately and securely right in your browser. No uploads, no servers, 100% client-side processing. Perfect for comparing contracts, invoices, and documents." />
-    <meta name="keywords" content="pdf diff, pdf compare, compare pdf files, pdf comparison tool, diff pdf documents, pdf difference checker, compare pdf online, free pdf diff, secure pdf comparison, private pdf compare" />
+    <meta name="description" content="Free online PDF comparison tool with CLI support. Compare PDF documents privately and securely in your browser or via command line. No uploads, no servers, 100% client-side. Perfect for comparing contracts, invoices, and CI/CD pipelines." />
+    <meta name="keywords" content="pdf diff, pdf compare, compare pdf files, pdf comparison tool, diff pdf documents, pdf difference checker, compare pdf online, free pdf diff, secure pdf comparison, private pdf compare, pdf diff cli, npx pdf-diff, command line pdf compare" />
     <meta name="author" content="James Montemagno" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.pdf-diff.com/" />
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.pdf-diff.com/" />
     <meta property="og:title" content="PDF Diff - Compare PDFs Privately & Securely in Your Browser" />
-    <meta property="og:description" content="Free online PDF comparison tool. Compare PDF documents privately and securely right in your browser. No uploads, no servers, 100% client-side processing." />
+    <meta property="og:description" content="Free online PDF comparison tool with CLI support. Compare PDF documents privately in your browser or via command line (npx). No uploads, no servers, 100% client-side processing." />
     <meta property="og:image" content="https://www.pdf-diff.com/social-banner.png" />
     <meta property="og:image:alt" content="PDF Diff - Compare PDFs Privately in Your Browser" />
     <meta property="og:image:width" content="1200" />
@@ -30,7 +30,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.pdf-diff.com/" />
     <meta property="twitter:title" content="PDF Diff - Compare PDFs Privately & Securely in Your Browser" />
-    <meta property="twitter:description" content="Free online PDF comparison tool. Compare PDF documents privately and securely right in your browser. No uploads, no servers, 100% client-side processing." />
+    <meta property="twitter:description" content="Free online PDF comparison tool with CLI support. Compare PDF documents privately in your browser or via command line (npx). No uploads, no servers, 100% client-side processing." />
     <meta property="twitter:image" content="https://www.pdf-diff.com/social-banner.png" />
     <meta property="twitter:image:alt" content="PDF Diff - Compare PDFs Privately in Your Browser" />
     <meta property="twitter:creator" content="@JamesMontemagno" />
@@ -67,7 +67,10 @@
         "Unified diff view",
         "Export to PDF",
         "Multi-page support",
-        "Dark/Light theme"
+        "Dark/Light theme",
+        "Command line interface (CLI)",
+        "npx support - zero install",
+        "CI/CD integration"
       ],
       "screenshot": "https://www.pdf-diff.com/pdf-icon.svg",
       "author": {
