--- a/public/cli.html
+++ b/public/cli.html
@@ -724,7 +724,7 @@ jobs:
   
   <footer>
     <p>
-      Made with ❤️ by <a href="https://github.com/jamesmontemagno" target="_blank" rel="noopener noreferrer">James Montemagno</a>
+      Made with ❤️ for privacy-conscious users
     </p>
     <p style="margin-top: 0.5rem;">
       <a href="/">Web App</a> · <a href="https://github.com/jamesmontemagno/pdf-diff" target="_blank" rel="noopener noreferrer">GitHub</a> · <a href="https://www.npmjs.com/package/@jamesmontemagno/pdf-diff" target="_blank" rel="noopener noreferrer">npm</a>
